--- a/public/style.css
+++ b/public/style.css
@@ -238,6 +238,47 @@ topbanner {
     color: #6b9aff
 }
 
+
+.bg-gunjou-0 {
+    background-color: #000000
+}
+
+.bg-gunjou-1 {
+    background-color: #151f33
+}
+
+.bg-gunjou-2 {
+    background-color: #202e4d
+}
+
+.bg-gunjou-3 {
+    background-color: #2b3e66
+}
+
+.bg-gunjou-4 {
+    background-color: #364d80
+}
+
+.bg-gunjou-5 {
+    background-color: #405c99
+}
+
+.bg-gunjou-6 {
+    background-color: #4b6cb3
+}
+
+.bg-gunjou-7 {
+    background-color: #567bcc
+}
+
+.bg-gunjou-8 {
+    background-color: #608be6
+}
+
+.bg-gunjou-9 {
+    background-color: #6b9aff
+}
+
 .asagi {
     color: #00a3af
 }
