--- a/views/ejs/common/login-dropdown.ejs
+++ b/views/ejs/common/login-dropdown.ejs
@@ -3,7 +3,7 @@
         aria-expanded="false">
         login
     </button>
-    <form class="dropdown-menu dropdown-menu-right px-4 py-3" style="text-align: right;" method="POST">
+    <form class="dropdown-menu dropdown-menu-right px-4 py-3" style="text-align: right; width: 400%;" method="POST">
         <div class="form-group">
             <div class="input-group">
                 <div class="input-group-prepend">
