--- a/views/ejs/common/post-caption.ejs
+++ b/views/ejs/common/post-caption.ejs
@@ -1,5 +1,5 @@
 <div class="row" id="post-<%=post.id%>">
-  <div class="col-auto" style="margin-bottom: 8px;">
+  <div class="col-auto" style="margin-bottom: 0.6rem;">
     <div id="caption-<%=post.id%>">
       <h6 style="margin-bottom: 0;">
         <a href="/post/<%=post.id%>" class="post-title kuro">
