--- a/views/ejs/common/footer.ejs
+++ b/views/ejs/common/footer.ejs
@@ -1,9 +1,8 @@
-<div class="container">
+<div class="container" style="margin-top: 32px; margin-bottom: 32px">
     <div id="licenses">
         <span>
             <code
                 class="gunjou">available by <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en"><ins>CC BY-NC-SA 4.0</ins></a></code></code>
         </span>
     </div>
-    <br>
 </div>
