--- a/views/ejs/common/header-navi.ejs
+++ b/views/ejs/common/header-navi.ejs
@@ -1,20 +1,20 @@
 <div class="col">
     <div class="row">
         <div class="col">
-            <h5 class="no-border no-margin no-padding letter-space-neg05" style="font-weight: 600;">
-                postenuous
-            </h5>
+            <h2 class="no-border no-margin no-padding letter-space-neg10 font-weight-500">
+                postenuous.
+            </h2>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <ul class="nav h5">
+            <ul class="nav h5 font-weight-400">
                 <li class="nav-item">
-                    <a class="nav-link gunjou-2 header-navi" href="/post">posts</a>
+                    <a class="nav-link gunjou-2 header-navi" href="/post">posts </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link gunjou-5 header-navi"
-                        href="/archive">archives</a>
+                        href="/archive">archives </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link gunjou-8 header-navi" href="/about">about</a>
