--- a/views/ejs/common/header.ejs
+++ b/views/ejs/common/header.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-bottom: 0px;">
     <div class="row">
         <%- include('header-navi') %>
         <% if (noUserDropdown) { %>
@@ -12,5 +12,5 @@
         </div>
         <% } %>
     </div>
-    <hr>
+    <div style="margin: 32px"></div>
 </div>
