--- a/views/ejs/latencytest.ejs
+++ b/views/ejs/latencytest.ejs
@@ -4,33 +4,30 @@
   <div style="padding: 16px">
     <%- include('common/header.ejs', {loginAs: null, noUserDropdown: true}) %>
     <div class="container">
-      <div>
-        <code>YOUR NETWORK LATENCY:</code>
-        <br>
-        client -> <code id="toserverresult"></code> -> server -> <code id="toclientresult"></code> -> client
-        <br>
-        loopback latency: <code id="loopbackresult"></code>
-        <br>
-        <code></code>
-        <br>
-        <a href="/post">← back to posts</a>
-        <hr>
+      <div class="row">
+        <div class="col-auto">
+          <p>
+            <code>YOUR NETWORK LATENCY:</code>
+            <br>
+            client <span style="background-color: whitesmoke;"><code id="toserverresult"></code></span> server <span
+              style="background-color: whitesmoke;"><code id="toclientresult"></code></span> client
+            <br>
+            loopback latency: <code id="loopbackresult"></code>
+          </p>
+
+        </div>
       </div>
-      <script>
-        var sendEpoch = Date.now();
-        $.ajax({
-          url: window.location.href,
-          type: 'POST',
-          dataType: 'json',
-          data: {padding: 'helloworld'}
-        }).done(function(data) {
-          var returnEpoch = Date.now();
-          $('#toserverresult').text(data.atServer - sendEpoch + 'ms');
-          $('#toclientresult').text(returnEpoch - data.atServer + 'ms');
-          $('#loopbackresult').text(returnEpoch - sendEpoch + 'ms');
-        })
-      </script>
+      <div class="w-100">
+        <button class="btn btn-primary w-100" onclick="latencyTest(this)">test</button>
+      </div>
+      <br>
+      <a href="/post">← back to posts</a>
+      <hr>
     </div>
     <%- include('common/footer.ejs') %>
   </div>
+  <script>
+    latencyTest(null)
+  </script>
+
 </body>
