--- a/views/ejs/common/post-caption.ejs
+++ b/views/ejs/common/post-caption.ejs
@@ -5,7 +5,7 @@
         <a href="/post/<%=post.id%>" class="post-title kuro">
           <%= post.title %>
         </a>
-        <a href="#" onclick="toggleSign(this, '↓', '↑', true)" id="arrow-<%=post.id%>"
+        <a href="javascript:void(0);" onclick="toggleSign(this, '↓', '↑', true)" id="arrow-<%=post.id%>"
           class="symbol-monospace holo-blue-dark">↓</a>
       </h6>
     </div>
