--- a/views/ejs/editor-post.ejs
+++ b/views/ejs/editor-post.ejs
@@ -21,20 +21,22 @@
 
                             <% } %>
                         </select>
-                     
+
                         <div class="input-group-append">
                             <input class="btn btn-outline-primary mb-2" type="button" value="remove" />
                         </div>
                     </div>
-                    
+
                     <% if (post) {%>
                     <div class="input-group form-group">
-                        <select class="custom-select" id="historyselector" name="history" onchange="getPostHistory(this)">
+                        <select class="custom-select" id="historyselector" name="history"
+                            onchange="getPostHistory(this)">
                             <option value="new" selected> - choose from history edits - </option>
                             <% if (post.history.length > 0) { %>
                             <% for (let i=0; i<post.history.length; i++) { %>
-                            <option value="<%=i%>"><%=post.history[i].title%> - <%=post.history[i].modifiedAt.toString() %>
-                                </option>
+                            <option value="<%=i%>"><%=post.history[i].title%> -
+                                <%=post.history[i].modifiedAt.toString() %>
+                            </option>
                             <% } %>
                             <% } %>
                         </select>
@@ -72,7 +74,8 @@
                     </div>
                     <div class="form-group">
                         <textarea name="body" class="form-control" id="posteditfield"
-                            placeholder="you can format with HTML <tags/> or markdown" rows="0" oninput="autoGrow(this)"
+                            placeholder="you can format with HTML <tags/> or markdown" rows="0"
+                            onchange="ackTextChanged(this)" oninput="autoGrow(this)"
                             onclick="initAutoGrow(this)"><% if(post) { %><%=post.body%><% } %></textarea>
                     </div>
                     <div class="form-group">
@@ -145,6 +148,8 @@
     <% if (post) { %>
     <script>
         $('#preview-btn').click();
+        renewTempDraft();
+        console.log(tempDraft);
     </script>
     <% } %>
 </body>
