--- a/views/ejs/editor-post.ejs
+++ b/views/ejs/editor-post.ejs
@@ -23,7 +23,7 @@
                         </select>
 
                         <div class="input-group-append">
-                            <input class="btn btn-outline-primary mb-2" type="button" value="remove" />
+                            <input class="btn text-white bg-gunjou-9 mb-2" type="button" value="remove" />
                         </div>
                     </div>
 
@@ -46,7 +46,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <div class="input-group-text">📰</div>
+                                <div class="input-group-text"><img src="/static/icons/title-24px-filled.svg"></div>
                             </div>
                             <input name="title" type="text" class="form-control" id="titlefield" placeholder="title..."
                                 <% if(post) { %> value="<%=post.title%>" <% } %>>
@@ -56,7 +56,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <div class="input-group-text">ℹ️</div>
+                                <div class="input-group-text"><img src="/static/icons/info-24px-filled.svg"></div>
                             </div>
                             <input name="brief" type="text" class="form-control" id="brieffield" placeholder="brief..."
                                 <% if(post) { %> value="<%=post.abstract%>" <% } %>>
@@ -65,7 +65,7 @@
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
-                                <div class="input-group-text">🏷️</div>
+                                <div class="input-group-text"><img src="/static/icons/local_offer-24px-filled.svg"></div>
                             </div>
                             <input name="tags" type="text" class="form-control" id="tagsfield"
                                 placeholder="tags, seperate with comma..." <% if(post) { %>
@@ -80,34 +80,73 @@
                             onclick="initAutoGrow(this)"><% if(post) { %><%=post.body%><% } %></textarea>
 
                         <div class="btn-group btn-group-sm" role="group" aria-label="editingGroup">
+                            
                             <button type="button" class="btn text-white bg-gunjou-0" style="border-top-left-radius: 0;" onclick="textEditorAddStyle(this, '#posteditfield', '**')">
-                                <span style="font-weight: 600;">B</span>
+                                <img src="/static/icons/format_bold-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-1" onclick="textEditorAddStyle(this, '#posteditfield', '*')">
-                                <span style="font-style: italic; font-family: serif;">I</span>
+                                <img src="/static/icons/format_italic-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-2" onclick="textEditorAddHyperlink(this, '#posteditfield')">
-                                <span>link</span>
+                                <img src="/static/icons/link-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-3" onclick="textEditorAddLinePrefix(this, '#posteditfield', '>')">
-                                <span>quote</span>
+                                <img src="/static/icons/format_quote-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-4" onclick="textEditorAddCode(this, '#posteditfield')">
-                                <code style="color:white">code</code>
+                                <img src="/static/icons/code-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-5" onclick="textEditorAddLinePrefix(this, '#posteditfield', '-')">
-                                <span>list</span>
+                                <img src="/static/icons/list-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-6" onclick="textEditorAddLinePrefix(this, '#posteditfield', '1.')">
-                                <span>ordered list</span>
+                                <img src="/static/icons/format_list_numbered-24px.svg">
                             </button>
                             <button type="button" class="btn text-white bg-gunjou-7" onclick="textEditorAddHorizontalLine(this, '#posteditfield')">
-                                <span>hr</span>
+                                <img src="/static/icons/horizontal_rule-24px.svg">
                             </button>
+                            <!--
+                            <button type="button" class="btn text-white bg-gunjou-8" onclick="textEditorAddHorizontalLine(this, '#posteditfield')">
+                                <span>table</span>
+                            </button>
+                            -->
+                            <div class="btn-group btn-group-sm">
+                                <button type="button" class="btn text-white bg-gunjou-8">
+                                    <img src="/static/icons/table-24px.svg">
+                                </button>
+                                <button type="button" class="btn text-white bg-gunjou-8 dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  <span class="sr-only">table format</span>
+                                </button>
+                                <div class="dropdown-menu">
+                                    <form class="px-4 py-3">
+                                      <div class="form-group">
+                                        <label for="exampleDropdownFormEmail1">Email address</label>
+                                        <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                                      </div>
+                                      <div class="form-group">
+                                        <label for="exampleDropdownFormPassword1">Password</label>
+                                        <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+                                      </div>
+                                      <div class="form-group">
+                                        <div class="form-check">
+                                          <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                                          <label class="form-check-label" for="dropdownCheck">
+                                            Remember me
+                                          </label>
+                                        </div>
+                                      </div>
+                                      <button type="submit" class="btn btn-primary">Sign in</button>
+                                    </form>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">New around here? Sign up</a>
+                                    <a class="dropdown-item" href="#">Forgot password?</a>
+                                  </div>
+                              </div>
+
                             <input type="file" name="file" id="photouploader" accept="image/*" style="display: none;" onchange="handlePhotoUpload(this, '#photoUploadBtn', '#posteditfield')">
-                            <button type="button" class="btn text-white bg-gunjou-8" id="photoUploadBtn"
+                            <button type="button" class="btn text-white bg-gunjou-9" id="photoUploadBtn"
                                 style="border-top-right-radius: 0;" onclick="textEditorUploadPhoto(this, '#photouploader')">
-                                <span>add photo</span>
+                                <img src="/static/icons/add_photo_alternate-24px.svg"> 
                             </button>
                             
                         </div>
